--- a/执行管理-进度管理-进度分析及控制/进度对比分析表/当前任务管控-当前任务汇报及措施表/resources_report_measures_1.0/html/resources_report_measures.html
+++ b/执行管理-进度管理-进度分析及控制/进度对比分析表/当前任务管控-当前任务汇报及措施表/resources_report_measures_1.0/html/resources_report_measures.html
@@ -105,7 +105,7 @@
       </el-table-column>
       <el-table-column
         prop="actual_cost_days"
-        label="实际花费工日"
+        label="实际花费工时"
         width="60"
         align="center"
       ></el-table-column>
@@ -123,7 +123,7 @@
       ></el-table-column>
       <el-table-column
         prop="remaining_period"
-        label="剩余工期"
+        label="剩余工时"
         width="60"
         align="center"
       ></el-table-column>
