--- a/执行管理-成本管理-成本分析及控制/成本分析与控制/成本对比分析表/成本对比分析表首页/cost_contrast_analysis_1.0/html/cost_contrast_analysis.html
+++ b/执行管理-成本管理-成本分析及控制/成本分析与控制/成本对比分析表/成本对比分析表首页/cost_contrast_analysis_1.0/html/cost_contrast_analysis.html
@@ -91,9 +91,9 @@
       </el-table-column>
       <el-table-column prop="task_status" label="任务状态" width="100" >
         <template slot-scope="scope">
-          <div v-show="scope.row.task_status==='1'">未开始</div>
-          <div v-show="scope.row.task_status==='2'">进行中</div>
-          <div v-show="scope.row.task_status==='3'">已完成</div>
+          <div v-show="scope.row.task_status==='000'">未开始</div>
+          <div v-show="scope.row.task_status==='100'">进行中</div>
+          <div v-show="scope.row.task_status==='200'">已完成</div>
         </template>
       </el-table-column>
       <el-table-column prop="handle_status" label="处理状态" width="100" >
@@ -131,15 +131,15 @@
         </div>
         <div class="table-info-box" v-if="currentTaskInfo.open">
           <el-table ref="TableRight" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="currentTaskInfo.data" style="margin:10px 0 10px 0;" :style="{width:tableWidth}" :cell-style="cellStyle" row-key="task_id" :border="true">
-            <el-table-column prop="plan_duration" label="计划工期(工日)" width="120"></el-table-column>
+            <el-table-column prop="plan_duration" label="计划工时" width="120"></el-table-column>
             <el-table-column prop="plan_quantities" label="计划工程量" width="100"></el-table-column>
             <el-table-column prop="plan_cost" label="计划总费用" width="100"></el-table-column>
             <el-table-column prop="Adjusted_cost" label="调整后总费用" width="100"></el-table-column>
-            <!-- <el-table-column prop="duration_after_adjustment" label="调整后工期" width="100"></el-table-column> -->
-            <el-table-column prop="actual_duration" label="实际工期(工日)" width="120"></el-table-column>
+            <!-- <el-table-column prop="duration_after_adjustment" label="调整后工时" width="100"></el-table-column> -->
+            <el-table-column prop="actual_duration" label="实际工时" width="120"></el-table-column>
             <el-table-column prop="actual_quantities" label="实际工程量" width="100"></el-table-column>
             <el-table-column prop="actual_cost" label="实际总费用" width="100"></el-table-column>
-            <el-table-column prop="deviation_reason" label="偏差原因" >
+            <el-table-column prop="deviation_reason" label="偏差原因" min-width="200">
               <template slot-scope="scope">
                 <el-input 
                   v-model="scope.row.deviation_reason" 
@@ -178,9 +178,10 @@
             <el-table-column prop="cv" label="CV(成本偏差)" width="100"></el-table-column>
             <el-table-column prop="cpi" label="CPI(成本绩效指数)" width="100"></el-table-column>
             <el-table-column prop="deviation_type" label="偏差类型" width="100"></el-table-column>
-            <el-table-column prop="deviation_reason" label="偏差原因">
-              <template slot-scope="scope">
+            <el-table-column prop="deviation_reason" label="偏差原因" min-width="200">
+              <template slot-scope="scope" >
                 <el-input 
+                
                   v-model="scope.row.deviation_reason" 
                   placeholder="请输入偏差原因"
                   maxlength="50"
@@ -214,7 +215,7 @@
                 </div>
               </template>
             </el-table-column>
-            <el-table-column label="后续任务处理措施">
+            <el-table-column label="后续任务处理措施" min-width="200">
               <template slot-scope="scope">
                 <div class="search-icon" v-if="scope.$index===(followTaskProcessing.data.length-1)">
                   <span style="font-size: 14px;">请输入处理措施</span>
@@ -271,7 +272,7 @@
           <el-table-column type="index" label="序号" width="55" align="center"></el-table-column>
           <el-table-column prop="wbs" label="任务代码" width="120"></el-table-column>
           <el-table-column prop="task_name" label="wbs任务名称"></el-table-column>
-          <el-table-column prop="day" label="工期(工日)" width="100"></el-table-column>
+          <el-table-column prop="day" label="工时" width="100"></el-table-column>
           <el-table-column prop="plan_starttime" label="计划开始时间" width="100"></el-table-column>
           <el-table-column prop="plan_endtime" label="计划完成时间" width="100"></el-table-column>
           <el-table-column prop="artificialAggregate" label="物料合计" width="100"></el-table-column>
