--- a/执行管理-成本管理-成本分析及控制/成本分析与控制/成本对比分析表/成本对比分析表首页/cost_contrast_analysis_1.0/html/cost_contrast_analysis.html
+++ b/执行管理-成本管理-成本分析及控制/成本分析与控制/成本对比分析表/成本对比分析表首页/cost_contrast_analysis_1.0/html/cost_contrast_analysis.html
@@ -28,10 +28,10 @@
       <button class="btn-itme" @click="syncCostMaintenance">
         同步到成本维护
       </button>
-      <button class="btn-itme" @click="goEarnedValueAnalysisChart">
+      <!-- <button class="btn-itme" @click="goEarnedValueAnalysisChart">
         任务挣值分析图
       </button>
-      <!-- <button class="btn-itme" @click="goTaskReportDetail">
+      <button class="btn-itme" @click="goTaskReportDetail">
         导出excel文件
       </button> -->
     </div>
