--- a/执行管理-成本管理-成本分析及控制/成本分析与控制/成本对比分析表/成本对比分析表首页/cost_contrast_analysis_1.0/html/cost_contrast_analysis.html
+++ b/执行管理-成本管理-成本分析及控制/成本分析与控制/成本对比分析表/成本对比分析表首页/cost_contrast_analysis_1.0/html/cost_contrast_analysis.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
   <head>
@@ -11,11 +11,11 @@
     <title>Document</title>
   </head>
 
-<body> -->
+<body>
 <div id="costCAApp">
-  <div class="btn-lsit">
+  <!-- <div class="btn-lsit">
     <div class="btn-box-left">
-      <!-- <button class="btn-itme" @click="refreshData">刷新</button>
+      <button class="btn-itme" @click="refreshData">刷新</button>
       <button class="btn-itme" @click="goExit">
         退出
       </button>
@@ -24,21 +24,21 @@
       </button>
       <button class="btn-itme" @click="goCurrentTaskControl">
         当前任务管控
-      </button> -->
+      </button> 
       <button class="btn-itme" @click="syncCostMaintenance">
         同步到成本维护
       </button>
-      <!-- <button class="btn-itme" @click="goEarnedValueAnalysisChart">
+       <button class="btn-itme" @click="goEarnedValueAnalysisChart">
         任务挣值分析图
       </button>
       <button class="btn-itme" @click="goTaskReportDetail">
         导出excel文件
-      </button> -->
+      </button> 
     </div>
     <div class="btn-box-right">
       <button class="btn-itme" @click="showSelectBox">筛选</button>
     </div>
-  </div>
+  </div> -->
   <div class="select-box" v-show="ifSelectBoxShow">
     <div class="select-options">
       <div class="sel-item">
@@ -295,9 +295,9 @@
     </div>
   </div>
 </div>
-<!-- <script src="../js/lodash.js"></script>
+<script src="../js/lodash.js"></script>
     <script src="../js/vue.min.js"></script>
     <script src="../js/element.js"></script>
     <script src="../js/test.js"></script>
   </body>
-</html> -->
+</html>
