--- a/执行管理-进度管理-进度分析及控制/进度对比分析表/进度对比分析表首页/progress_contrast_analysis_2.0/html/progress_contrast_analysis.html
+++ b/执行管理-进度管理-进度分析及控制/进度对比分析表/进度对比分析表首页/progress_contrast_analysis_2.0/html/progress_contrast_analysis.html
@@ -104,7 +104,6 @@
             row-key="task_id"
             :border="true"
             @row-click="rowClick"
-            @row-dblclick="rowDblclick"
           >
             <!-- <el-table-column type="select" width="40" align="center">
             <template slot="header" slot-scope="scope">
@@ -175,7 +174,7 @@
               <el-table
                 ref="TableRight"
                 :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}"
-                :data="beforeTaskInfo.data"
+                :data="currentRow!==null?currentRow.beforeTaskInfo:[]"
                 style="margin: 10px 0 10px 0;"
                 :style="{width:tableWidth}"
                 :cell-style="cellStyle"
@@ -215,7 +214,7 @@
               <el-table
                 ref="TableRight"
                 :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}"
-                :data="currentTaskInfo.data"
+                :data="currentRow!==null?currentRow.currentTaskInfo:[]"
                 style="margin: 10px 0 10px 0;"
                 :style="{width:tableWidth}"
                 :cell-style="cellStyle"
@@ -344,26 +343,6 @@
               </el-table>
             </div>
           </div>
-          <!-- <div class="detail-info-box">
-            <div class="title-info-box">
-              <div class="drop-btn">
-                <i class="el-icon-caret-bottom" @click="iconArrowClick3(earnedValueAnalysisSuggestions)" v-if="currentTaskInfo.open"></i>
-                <i class="el-icon-caret-right" @click="iconArrowClick3(earnedValueAnalysisSuggestions)" v-else></i>
-              </div>
-              <span class="title-text">${earnedValueAnalysisSuggestions.title}</span>
-            </div>
-            <div class="table-info-box" v-if="earnedValueAnalysisSuggestions.open">
-              <el-table ref="currentTaskInfoTable" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="earnedValueAnalysisSuggestions.data" style="margin:10px 0 10px 0;" :cell-style="cellStyle" row-key="task_id" :border="true">
-                <el-table-column prop="plan_duration" label="BCWS(已完成工作预算)" ></el-table-column>
-                <el-table-column prop="plan_quantities" label="BCWP(计划工作预算)"></el-table-column>
-                <el-table-column prop="plan_cost" label="ACWP(已完成实际费用)" ></el-table-column>
-                <el-table-column prop="cost_after_adjustment" label="SV(进度偏差)"></el-table-column>
-                <el-table-column prop="actual_duration" label="CV(成本偏差)"></el-table-column>
-                <el-table-column prop="actual_quantities" label="CPI(成本绩效指数)" ></el-table-column>
-                <el-table-column prop="actual_cost" label="实际总费用"></el-table-column>
-              </el-table>
-            </div>
-          </div> -->
           <!-- 后续任务处理表 -->
           <div class="detail-info-box" v-show="ifFollowTaskShow">
             <div class="title-info-box">
@@ -385,7 +364,7 @@
               <el-table
                 ref="TableRight"
                 :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}"
-                :data="followTaskProcessing.data"
+                :data="currentRow!==null?currentRow.followTaskInfo:[]"
                 style="margin: 10px 0 10px 0;"
                 :style="{width:tableWidth}"
                 :cell-style="cellStyle"
@@ -396,7 +375,7 @@
                   <template slot-scope="scope">
                     <div
                       class="search-icon"
-                      v-if="scope.$index===(followTaskProcessing.data.length-1)"
+                      v-if="scope.$index===(currentRow.followTaskInfo.length-1)"
                       @click="goSelectFollowTask"
                     >
                       <span style="font-size: 14px;">请选择后续任务</span>
@@ -416,7 +395,7 @@
                   <template slot-scope="scope">
                     <div
                       class="search-icon"
-                      v-if="scope.$index===(followTaskProcessing.data.length-1)"
+                      v-if="scope.$index===(currentRow.followTaskInfo.length-1)"
                     >
                       <span style="font-size: 14px;">请输入处理措施</span>
                     </div>
@@ -429,12 +408,13 @@
                           controls-position="right"
                           @change="hmChange"
                           :min="0"
-                          :max="10000"
+                          :max="scope.row.plan_duration"
                           size="small"
                         ></el-input-number>
                         小时
                       </div>
                       <div
+                        v-show="scope.row.delFlag"
                         class="follow-task-handle-right"
                         @click="handleFollowTaskDel(scope.row,scope.$index)"
                       >
@@ -486,9 +466,7 @@
       <div class="task-report-detail-box" v-show="taskReportDetailShow">
         <div class="report-detail-content">
           <div class="detail-title">
-            <span
-              >${currentClickedTask?currentClickedTask.task_name:"XXX"}任务汇报详情</span
-            >
+            <span>${currentRow?currentRow.task_name:"XXX"}任务汇报详情</span>
             <i class="el-icon-close" @click="closeTaskReportDetail"></i>
           </div>
           <div class="detail-table">
