--- a/执行管理-成本管理-成本分析及控制/成本分析与控制/成本对比分析表/成本对比分析表首页/cost_contrast_analysis_2.0/html/cost_contrast_analysis.html
+++ b/执行管理-成本管理-成本分析及控制/成本分析与控制/成本对比分析表/成本对比分析表首页/cost_contrast_analysis_2.0/html/cost_contrast_analysis.html
@@ -152,7 +152,7 @@
             <el-table-column prop="actual_duration" label="实际工时" width="120"></el-table-column>
             <el-table-column prop="actual_quantities" label="实际工程量" width="100"></el-table-column>
             <el-table-column prop="actual_cost" label="实际总费用" width="100"></el-table-column>
-            <el-table-column prop="deviation_reason" label="偏差原因" min-width="200">
+            <!-- <el-table-column prop="deviation_reason" label="偏差原因" min-width="200">
               <template slot-scope="scope">
                 <el-input 
                   v-model="scope.row.deviation_reason" 
@@ -162,7 +162,7 @@
                   @change="drChange"
                   ></el-input>
               </template>
-            </el-table-column>
+            </el-table-column> -->
             <!-- <el-table-column prop="free_time" label="自由时差" width="100"></el-table-column>
             <el-table-column prop="free_time_exceed" label="超出自由时差" width="100"></el-table-column>
             <el-table-column prop="free_time_analysis_conclusion" label="自由时差分析结论" width="160"></el-table-column>
