--- a/质量计划设置页面自定义控件/quality_plan_1.5_cache/quality_plan/html/quality_plan.html
+++ b/质量计划设置页面自定义控件/quality_plan_1.5_cache/quality_plan/html/quality_plan.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="../css/element.css" />
     <link rel="stylesheet" href="../css/table.css" />
     <link rel="stylesheet" href="../css/main.css" />
 
@@ -272,6 +273,8 @@ v-loading="loading"
     </div>
     <script src="../js/lodash.js"></script>
     <script src="../js/vue.min.js"></script>
+    <script src="../js/element.js"></script>
+
     <script src="../js/table.js"></script>
     <script src="../js/test.js" type="module"></script>
   </body>
