--- a/项目简况/project_brief/html/project_brief.html
+++ b/项目简况/project_brief/html/project_brief.html
@@ -33,7 +33,7 @@
     <div class="table-box">
       <el-table
         :data="sliceTableData"
-        height="328"
+        height="150"
         :row-class-name="tableRowClassName"
         :header-cell-style="{'font-size':'14px',color:'#2b2b2b'}"
         style="width: 100%;"
@@ -54,17 +54,17 @@
             </el-tooltip>
           </template>
         </el-table-column>
-        <el-table-column label="公路类型">
+        <el-table-column label="公路类型" width="100">
           <template slot-scope="scope">
             <span class="unit-info">${ scope.row.highway_type }</span>
           </template>
         </el-table-column>
-        <el-table-column label="公路等级">
+        <el-table-column label="公路等级" width="100">
           <template slot-scope="scope">
             <span class="unit-info">${ scope.row.highway_grade }</span>
           </template>
         </el-table-column>
-        <el-table-column label="里程规模">
+        <el-table-column label="里程规模" width="100">
           <template slot-scope="scope">
             <span class="unit-info">${ scope.row.mileage_scale }</span>
           </template>
@@ -84,7 +84,7 @@
             </el-tooltip>
           </template>
         </el-table-column>
-        <el-table-column label="规划版本">
+        <el-table-column label="规划版本" width="100">
           <template slot-scope="scope">
             <span class="unit-info">${ scope.row.planning_version }</span>
           </template>
