--- a/项目设计管理看板/design_management_kanban/html/design_management_kanban.html
+++ b/项目设计管理看板/design_management_kanban/html/design_management_kanban.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 
 <html lang="en">
   <head>
@@ -10,53 +10,51 @@
 
     <title>Document</title>
   </head>
-  <body>
-    <div id="designManagementApp">
-      <div class="content">
-        <div class="header-box">
-          <div class="title-box">
-            <span class="title">${projectName}项目设计管理看板</span>
-          </div>
-          <div class="pagination-box">
-            <div class="btn-item btn-prev" @click="prevBtn">
-              <i class="el-icon-arrow-left"></i>
-            </div>
-            <div class="cpage">${currentPage}</div>
-            <div class="btn-item btn-next" @click="nextBtn">
-              <i class="el-icon-arrow-right"></i>
-            </div>
-            <div class="total-page">
-              共 <span class="page-totol-num">${totalPage}</span> 页
-            </div>
-          </div>
+  <body> -->
+<div id="designManagementApp">
+  <div class="content">
+    <div class="header-box">
+      <div class="title-box">
+        <span class="title">${projectName}项目设计管理看板</span>
+      </div>
+      <div class="pagination-box">
+        <div class="btn-item btn-prev" @click="prevBtn">
+          <i class="el-icon-arrow-left"></i>
         </div>
-        <div class="table-box">
-          <el-table
-            :data="sliceTableData"
-            height="328"
-            :row-class-name="tableRowClassName"
-            :header-cell-style="{'font-size':'14px',color:'#2b2b2b'}"
-            style="width: 100%;"
-          >
-            <el-table-column label="协同单位">
-              <template slot-scope="scope">
-                <span class="unit-title"
-                  >${ scope.row.collaborative_unit }</span
-                >
-              </template>
-            </el-table-column>
-            <el-table-column label="协同类型" width="180">
-              <template slot-scope="scope">
-                <span class="unit-info">${ scope.row.collaborative_type }</span>
-              </template>
-            </el-table-column>
-          </el-table>
+        <div class="cpage">${currentPage}</div>
+        <div class="btn-item btn-next" @click="nextBtn">
+          <i class="el-icon-arrow-right"></i>
+        </div>
+        <div class="total-page">
+          共 <span class="page-totol-num">${totalPage}</span> 页
         </div>
       </div>
     </div>
-    <script src="../js/lodash.js"></script>
+    <div class="table-box">
+      <el-table
+        :data="sliceTableData"
+        height="150"
+        :row-class-name="tableRowClassName"
+        :header-cell-style="{'font-size':'14px',color:'#2b2b2b'}"
+        style="width: 100%;"
+      >
+        <el-table-column label="协同单位" min-width="220">
+          <template slot-scope="scope">
+            <span class="unit-title">${ scope.row.collaborative_unit }</span>
+          </template>
+        </el-table-column>
+        <el-table-column label="协同类型" width="180">
+          <template slot-scope="scope">
+            <span class="unit-info">${ scope.row.collaborative_type }</span>
+          </template>
+        </el-table-column>
+      </el-table>
+    </div>
+  </div>
+</div>
+<!-- <script src="../js/lodash.js"></script>
     <script src="../js/vue.min.js"></script>
     <script src="../js/element.js"></script>
     <script src="../js/test.js"></script>
   </body>
-</html>
+</html> -->
