fix progress_ca max handle_measure

--- a/执行管理-进度管理-进度分析及控制/进度对比分析表/进度对比分析表首页/progress_contrast_analysis_2.0/html/progress_contrast_analysis.html
+++ b/执行管理-进度管理-进度分析及控制/进度对比分析表/进度对比分析表首页/progress_contrast_analysis_2.0/html/progress_contrast_analysis.html
@@ -388,7 +388,7 @@
                       controls-position="right"
                       @change="hmChange"
                       :min="0"
-                      :max="scope.row.plan_duration"
+                      :max="scope.row.plan_duration-1"
                       size="small"
                     ></el-input-number>
                     小时
