--- a/执行管理-进度管理-进度分析及控制/进度对比分析表/进度对比分析表首页/progress_contrast_analysis_2.0/html/progress_contrast_analysis.html
+++ b/执行管理-进度管理-进度分析及控制/进度对比分析表/进度对比分析表首页/progress_contrast_analysis_2.0/html/progress_contrast_analysis.html
@@ -287,9 +287,7 @@
                   v-else-if="scope.row.task_status==='100'"
                   >进行中</span
                 >
-                <span v-else
-                  >造成后续任务工时延长${scope.row.free_time_exceed}天</span
-                >
+                <span v-else>${scope.row.free_time_analysis_conclusion}</span>
               </template>
             </el-table-column>
             <el-table-column
@@ -320,9 +318,7 @@
                   v-else-if="scope.row.task_status==='100'"
                   >进行中</span
                 >
-                <span v-else
-                  >造成项目总工时延长${scope.row.total_time_exceed}天</span
-                >
+                <span v-else>${scope.row.total_time_analysis_conclusion}</span>
               </template>
             </el-table-column>
           </el-table>
